// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ContentEditor 1. Empty 1`] = `
<div
  className="sc-gqjmRU iVAfed"
>
  <div
    className="sc-htpNat sc-bxivhb mui-panel ecWhHw"
    onClick={[Function]}
  >
    <div
      className="sc-ifAKCX dtaADw"
    >
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add text block"
        type="button"
      >
        + text
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add sibling text block"
        type="button"
      >
        + 2 text columns
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add pie chart"
        type="button"
      >
        + pie chart
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add bar chart"
        type="button"
      >
        + bar chart
      </button>
    </div>
  </div>
  <div
    className="sc-htpNat sc-VigVT mui-panel dmHvgR"
  />
</div>
`;

exports[`Storyshots ContentEditor 2. Draft 1`] = `
<div
  className="sc-gqjmRU iVAfed"
>
  <div
    className="sc-htpNat sc-bxivhb mui-panel ecWhHw"
    onClick={[Function]}
  >
    <div
      className="sc-ifAKCX dtaADw"
    >
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add text block"
        type="button"
      >
        + text
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add sibling text block"
        type="button"
      >
        + 2 text columns
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add pie chart"
        type="button"
      >
        + pie chart
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add bar chart"
        type="button"
      >
        + bar chart
      </button>
    </div>
  </div>
  <div
    className="sc-htpNat sc-VigVT mui-panel dmHvgR"
  >
    {"blocks":[{"key":1,"text":"This block is draft.js content. Click here to edit the text.","type":"unstyled","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}},{"key":2,"text":"","type":"unstyled","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}},{"key":3,"text":"We are planning to add text formatting toolbar soon.","type":"unstyled","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}},{"key":4,"text":"","type":"unstyled","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}},{"key":5,"text":"Draft.js is a framework for building rich text editors in React,","type":"unstyled","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}},{"key":6,"text":"powered by an immutable model and abstracting over cross-browser differences.","type":"unstyled","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}}],"entityMap":{}}
  </div>
</div>
`;

exports[`Storyshots ContentEditor 3. Pie 1`] = `
<div
  className="sc-gqjmRU iVAfed"
>
  <div
    className="sc-htpNat sc-bxivhb mui-panel ecWhHw"
    onClick={[Function]}
  >
    <div
      className="sc-ifAKCX dtaADw"
    >
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add text block"
        type="button"
      >
        + text
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add sibling text block"
        type="button"
      >
        + 2 text columns
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add pie chart"
        type="button"
      >
        + pie chart
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add bar chart"
        type="button"
      >
        + bar chart
      </button>
    </div>
  </div>
  <div
    className="sc-htpNat sc-VigVT mui-panel dmHvgR"
  >
    <div
      className="sc-bZQynM kXzfvt"
      onClick={[Function]}
    >
      <div
        className="sc-iwsKbI cLjAWh"
      />
      <svg
        viewBox="0 0 100 100"
      >
        <path
          d="M 16.683114654475617 51.047025302604276 A 33.33333333333333 33.33333333333333 0 0 0 26.429773960448422 73.57022603955159 L 50 50 L 16.683114654475617 51.047025302604276"
          fill="#fa6479"
        />
        <g>
          <text
            fill="black"
            fontSize={4.166666666666667}
            textAnchor="middle"
            x={9.210905525156399}
            y={67.6510173615458}
          >
            12
            %
          </text>
          <text
            dy={4.166666666666667}
            fill="black"
            fontSize={3.125}
            textAnchor="middle"
            x={9.210905525156399}
            y={67.6510173615458}
          >
            repairs
          </text>
        </g>
        <path
          d="M 22.430647524181275 31.263887404928983 A 33.33333333333333 33.33333333333333 0 0 0 16.683114654475617 51.047025302604276 L 50 50 L 22.430647524181275 31.263887404928983"
          fill="#cb91a0"
        />
        <g>
          <text
            fill="black"
            fontSize={4.166666666666667}
            textAnchor="middle"
            x={7.320280636580307}
            y={37.60039528714537}
          >
            10
            %
          </text>
          <text
            dy={4.166666666666667}
            fill="black"
            fontSize={3.125}
            textAnchor="middle"
            x={7.320280636580307}
            y={37.60039528714537}
          >
            consulting
          </text>
        </g>
        <path
          d="M 34.866983342015104 20.29978252705441 A 33.33333333333333 33.33333333333333 0 0 0 22.430647524181275 31.263887404928983 L 50 50 L 34.866983342015104 20.29978252705441"
          fill="#a38ca4"
        />
        <g>
          <text
            fill="black"
            fontSize={4.166666666666667}
            textAnchor="middle"
            x={20.608361541171025}
            y={16.66173023864625}
          >
            8
            %
          </text>
          <text
            dy={4.166666666666667}
            fill="black"
            fontSize={3.125}
            textAnchor="middle"
            x={20.608361541171025}
            y={16.66173023864625}
          >
            training
          </text>
        </g>
        <path
          d="M 36.76173697884062 80.59182085613268 A 33.33333333333333 33.33333333333333 0 1 0 34.866983342015104 20.29978252705441 L 50 50 L 36.76173697884062 80.59182085613268"
          fill="#7482aa"
        />
        <g>
          <text
            fill="white"
            fontSize={4.166666666666667}
            textAnchor="middle"
            x={66.65844267276219}
            y={49.47648734869786}
          >
            64
            %
          </text>
          <text
            dy={4.166666666666667}
            fill="white"
            fontSize={3.125}
            textAnchor="middle"
            x={66.65844267276219}
            y={49.47648734869786}
          >
            product sales
          </text>
        </g>
        <path
          d="M 26.429773960448408 73.57022603955157 A 33.33333333333333 33.33333333333333 0 0 0 36.76173697884062 80.59182085613268 L 50 50 L 26.429773960448408 73.57022603955157"
          fill="#35aeb7"
        />
        <g>
          <text
            fill="black"
            fontSize={4.166666666666667}
            textAnchor="middle"
            x={25.01851653990525}
            y={86.75913663442492}
          >
            6
            %
          </text>
          <text
            dy={4.166666666666667}
            fill="black"
            fontSize={3.125}
            textAnchor="middle"
            x={25.01851653990525}
            y={86.75913663442492}
          >
            others
          </text>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots ContentEditor 4. Pie and draft 1`] = `
<div
  className="sc-gqjmRU iVAfed"
>
  <div
    className="sc-htpNat sc-bxivhb mui-panel ecWhHw"
    onClick={[Function]}
  >
    <div
      className="sc-ifAKCX dtaADw"
    >
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add text block"
        type="button"
      >
        + text
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add sibling text block"
        type="button"
      >
        + 2 text columns
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add pie chart"
        type="button"
      >
        + pie chart
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add bar chart"
        type="button"
      >
        + bar chart
      </button>
    </div>
  </div>
  <div
    className="sc-htpNat sc-VigVT mui-panel dmHvgR"
  >
    <div
      style={
        Object {
          "columnGap": 20,
          "display": "grid",
          "gridTemplateColumns": "repeat(auto-fit, minmax(300px, 1fr))",
          "gridTemplateRows": "",
          "rowGap": 20,
        }
      }
    >
      <div
        className="sc-bZQynM kXzfvt"
        onClick={[Function]}
      >
        <div
          className="sc-iwsKbI cLjAWh"
        />
        <svg
          viewBox="0 0 100 100"
        >
          <path
            d="M 16.683114654475617 51.047025302604276 A 33.33333333333333 33.33333333333333 0 0 0 26.429773960448422 73.57022603955159 L 50 50 L 16.683114654475617 51.047025302604276"
            fill="#fa6479"
          />
          <g>
            <text
              fill="black"
              fontSize={4.166666666666667}
              textAnchor="middle"
              x={9.210905525156399}
              y={67.6510173615458}
            >
              12
              %
            </text>
            <text
              dy={4.166666666666667}
              fill="black"
              fontSize={3.125}
              textAnchor="middle"
              x={9.210905525156399}
              y={67.6510173615458}
            >
              repairs
            </text>
          </g>
          <path
            d="M 22.430647524181275 31.263887404928983 A 33.33333333333333 33.33333333333333 0 0 0 16.683114654475617 51.047025302604276 L 50 50 L 22.430647524181275 31.263887404928983"
            fill="#cb91a0"
          />
          <g>
            <text
              fill="black"
              fontSize={4.166666666666667}
              textAnchor="middle"
              x={7.320280636580307}
              y={37.60039528714537}
            >
              10
              %
            </text>
            <text
              dy={4.166666666666667}
              fill="black"
              fontSize={3.125}
              textAnchor="middle"
              x={7.320280636580307}
              y={37.60039528714537}
            >
              consulting
            </text>
          </g>
          <path
            d="M 34.866983342015104 20.29978252705441 A 33.33333333333333 33.33333333333333 0 0 0 22.430647524181275 31.263887404928983 L 50 50 L 34.866983342015104 20.29978252705441"
            fill="#a38ca4"
          />
          <g>
            <text
              fill="black"
              fontSize={4.166666666666667}
              textAnchor="middle"
              x={20.608361541171025}
              y={16.66173023864625}
            >
              8
              %
            </text>
            <text
              dy={4.166666666666667}
              fill="black"
              fontSize={3.125}
              textAnchor="middle"
              x={20.608361541171025}
              y={16.66173023864625}
            >
              training
            </text>
          </g>
          <path
            d="M 36.76173697884062 80.59182085613268 A 33.33333333333333 33.33333333333333 0 1 0 34.866983342015104 20.29978252705441 L 50 50 L 36.76173697884062 80.59182085613268"
            fill="#7482aa"
          />
          <g>
            <text
              fill="white"
              fontSize={4.166666666666667}
              textAnchor="middle"
              x={66.65844267276219}
              y={49.47648734869786}
            >
              64
              %
            </text>
            <text
              dy={4.166666666666667}
              fill="white"
              fontSize={3.125}
              textAnchor="middle"
              x={66.65844267276219}
              y={49.47648734869786}
            >
              product sales
            </text>
          </g>
          <path
            d="M 26.429773960448408 73.57022603955157 A 33.33333333333333 33.33333333333333 0 0 0 36.76173697884062 80.59182085613268 L 50 50 L 26.429773960448408 73.57022603955157"
            fill="#35aeb7"
          />
          <g>
            <text
              fill="black"
              fontSize={4.166666666666667}
              textAnchor="middle"
              x={25.01851653990525}
              y={86.75913663442492}
            >
              6
              %
            </text>
            <text
              dy={4.166666666666667}
              fill="black"
              fontSize={3.125}
              textAnchor="middle"
              x={25.01851653990525}
              y={86.75913663442492}
            >
              others
            </text>
          </g>
        </svg>
      </div>
      {"blocks":[{"key":1,"text":"This block is draft.js content. Click here to edit the text.","type":"unstyled","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}},{"key":2,"text":"","type":"unstyled","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}},{"key":3,"text":"We are planning to add text formatting toolbar soon.","type":"unstyled","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}},{"key":4,"text":"","type":"unstyled","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}},{"key":5,"text":"Draft.js is a framework for building rich text editors in React,","type":"unstyled","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}},{"key":6,"text":"powered by an immutable model and abstracting over cross-browser differences.","type":"unstyled","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}}],"entityMap":{}}
    </div>
  </div>
</div>
`;

exports[`Storyshots ContentEditor 5. Draft and titled pie 1`] = `
<div
  className="sc-gqjmRU iVAfed"
>
  <div
    className="sc-htpNat sc-bxivhb mui-panel ecWhHw"
    onClick={[Function]}
  >
    <div
      className="sc-ifAKCX dtaADw"
    >
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add text block"
        type="button"
      >
        + text
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add sibling text block"
        type="button"
      >
        + 2 text columns
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add pie chart"
        type="button"
      >
        + pie chart
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add bar chart"
        type="button"
      >
        + bar chart
      </button>
    </div>
  </div>
  <div
    className="sc-htpNat sc-VigVT mui-panel dmHvgR"
  >
    <div
      style={
        Object {
          "columnGap": 20,
          "display": "grid",
          "gridTemplateColumns": "repeat(auto-fit, minmax(300px, 1fr))",
          "gridTemplateRows": "",
          "rowGap": 20,
        }
      }
    >
      {"blocks":[{"key":1,"text":"This block is draft.js content. Click here to edit the text.","type":"unstyled","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}},{"key":2,"text":"","type":"unstyled","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}},{"key":3,"text":"We are planning to add text formatting toolbar soon.","type":"unstyled","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}},{"key":4,"text":"","type":"unstyled","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}},{"key":5,"text":"Draft.js is a framework for building rich text editors in React,","type":"unstyled","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}},{"key":6,"text":"powered by an immutable model and abstracting over cross-browser differences.","type":"unstyled","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}}],"entityMap":{}}
      <div
        style={
          Object {
            "columnGap": 20,
            "display": "grid",
            "gridTemplateColumns": "repeat(auto-fit, minmax(300px, 1fr))",
            "gridTemplateRows": "",
            "rowGap": 20,
          }
        }
      >
        {"blocks":[{"key":1,"text":"V2. London income - Year 8 - 3,400,000","type":"header-two","depth":0,"inlineStyleRanges":[],"entityRanges":[],"data":{}}],"entityMap":{}}
        <div
          className="sc-bZQynM kXzfvt"
          onClick={[Function]}
        >
          <div
            className="sc-iwsKbI cLjAWh"
          />
          <svg
            viewBox="0 0 100 100"
          >
            <path
              d="M 16.683114654475617 51.047025302604276 A 33.33333333333333 33.33333333333333 0 0 0 26.429773960448422 73.57022603955159 L 50 50 L 16.683114654475617 51.047025302604276"
              fill="#fa6479"
            />
            <g>
              <text
                fill="black"
                fontSize={4.166666666666667}
                textAnchor="middle"
                x={9.210905525156399}
                y={67.6510173615458}
              >
                12
                %
              </text>
              <text
                dy={4.166666666666667}
                fill="black"
                fontSize={3.125}
                textAnchor="middle"
                x={9.210905525156399}
                y={67.6510173615458}
              >
                repairs
              </text>
            </g>
            <path
              d="M 22.430647524181275 31.263887404928983 A 33.33333333333333 33.33333333333333 0 0 0 16.683114654475617 51.047025302604276 L 50 50 L 22.430647524181275 31.263887404928983"
              fill="#cb91a0"
            />
            <g>
              <text
                fill="black"
                fontSize={4.166666666666667}
                textAnchor="middle"
                x={7.320280636580307}
                y={37.60039528714537}
              >
                10
                %
              </text>
              <text
                dy={4.166666666666667}
                fill="black"
                fontSize={3.125}
                textAnchor="middle"
                x={7.320280636580307}
                y={37.60039528714537}
              >
                consulting
              </text>
            </g>
            <path
              d="M 34.866983342015104 20.29978252705441 A 33.33333333333333 33.33333333333333 0 0 0 22.430647524181275 31.263887404928983 L 50 50 L 34.866983342015104 20.29978252705441"
              fill="#a38ca4"
            />
            <g>
              <text
                fill="black"
                fontSize={4.166666666666667}
                textAnchor="middle"
                x={20.608361541171025}
                y={16.66173023864625}
              >
                8
                %
              </text>
              <text
                dy={4.166666666666667}
                fill="black"
                fontSize={3.125}
                textAnchor="middle"
                x={20.608361541171025}
                y={16.66173023864625}
              >
                training
              </text>
            </g>
            <path
              d="M 36.76173697884062 80.59182085613268 A 33.33333333333333 33.33333333333333 0 1 0 34.866983342015104 20.29978252705441 L 50 50 L 36.76173697884062 80.59182085613268"
              fill="#7482aa"
            />
            <g>
              <text
                fill="white"
                fontSize={4.166666666666667}
                textAnchor="middle"
                x={66.65844267276219}
                y={49.47648734869786}
              >
                64
                %
              </text>
              <text
                dy={4.166666666666667}
                fill="white"
                fontSize={3.125}
                textAnchor="middle"
                x={66.65844267276219}
                y={49.47648734869786}
              >
                product sales
              </text>
            </g>
            <path
              d="M 26.429773960448408 73.57022603955157 A 33.33333333333333 33.33333333333333 0 0 0 36.76173697884062 80.59182085613268 L 50 50 L 26.429773960448408 73.57022603955157"
              fill="#35aeb7"
            />
            <g>
              <text
                fill="black"
                fontSize={4.166666666666667}
                textAnchor="middle"
                x={25.01851653990525}
                y={86.75913663442492}
              >
                6
                %
              </text>
              <text
                dy={4.166666666666667}
                fill="black"
                fontSize={3.125}
                textAnchor="middle"
                x={25.01851653990525}
                y={86.75913663442492}
              >
                others
              </text>
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ContentEditor 6. Chart 1`] = `
<div
  className="sc-gqjmRU iVAfed"
>
  <div
    className="sc-htpNat sc-bxivhb mui-panel ecWhHw"
    onClick={[Function]}
  >
    <div
      className="sc-ifAKCX dtaADw"
    >
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add text block"
        type="button"
      >
        + text
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add sibling text block"
        type="button"
      >
        + 2 text columns
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add pie chart"
        type="button"
      >
        + pie chart
      </button>
      <button
        className="sc-bwzfXH mui-btn mui-btn--default mui-btn--medium uTxCW"
        onClick={[Function]}
        title="Add bar chart"
        type="button"
      >
        + bar chart
      </button>
    </div>
  </div>
  <div
    className="sc-htpNat sc-VigVT mui-panel dmHvgR"
  >
    <div
      className="sc-bZQynM kXzfvt"
      onClick={[Function]}
    >
      <div
        className="sc-iwsKbI cLjAWh"
      />
      <svg
        viewBox="0 0 100 100"
      >
        <path
          d="M NaN NaN A 33.33333333333333 33.33333333333333 0 0 0 26.429773960448422 73.57022603955159 L 50 50 L NaN NaN"
          fill="#fa6479"
        />
        <g>
          <text
            fill="black"
            fontSize={4.166666666666667}
            textAnchor="middle"
            x={NaN}
            y={NaN}
          >
            %
          </text>
          <text
            dy={4.166666666666667}
            fill="black"
            fontSize={3.125}
            textAnchor="middle"
            x={NaN}
            y={NaN}
          >
            WFGLA
          </text>
        </g>
        <path
          d="M NaN NaN A 33.33333333333333 33.33333333333333 0 0 0 NaN NaN L 50 50 L NaN NaN"
          fill="#cb91a0"
        />
        <g>
          <text
            fill="black"
            fontSize={4.166666666666667}
            textAnchor="middle"
            x={NaN}
            y={NaN}
          >
            %
          </text>
          <text
            dy={4.166666666666667}
            fill="black"
            fontSize={3.125}
            textAnchor="middle"
            x={NaN}
            y={NaN}
          >
            Region A
          </text>
        </g>
        <path
          d="M NaN NaN A 33.33333333333333 33.33333333333333 0 0 0 NaN NaN L 50 50 L NaN NaN"
          fill="#a38ca4"
        />
        <g>
          <text
            fill="black"
            fontSize={4.166666666666667}
            textAnchor="middle"
            x={NaN}
            y={NaN}
          >
            %
          </text>
          <text
            dy={4.166666666666667}
            fill="black"
            fontSize={3.125}
            textAnchor="middle"
            x={NaN}
            y={NaN}
          >
            Region B
          </text>
        </g>
        <path
          d="M NaN NaN A 33.33333333333333 33.33333333333333 0 0 0 NaN NaN L 50 50 L NaN NaN"
          fill="#7482aa"
        />
        <g>
          <text
            fill="black"
            fontSize={4.166666666666667}
            textAnchor="middle"
            x={NaN}
            y={NaN}
          >
            %
          </text>
          <text
            dy={4.166666666666667}
            fill="black"
            fontSize={3.125}
            textAnchor="middle"
            x={NaN}
            y={NaN}
          >
            Region C
          </text>
        </g>
        <path
          d="M NaN NaN A 33.33333333333333 33.33333333333333 0 0 0 NaN NaN L 50 50 L NaN NaN"
          fill="#35aeb7"
        />
        <g>
          <text
            fill="black"
            fontSize={4.166666666666667}
            textAnchor="middle"
            x={NaN}
            y={NaN}
          >
            %
          </text>
          <text
            dy={4.166666666666667}
            fill="black"
            fontSize={3.125}
            textAnchor="middle"
            x={NaN}
            y={NaN}
          >
            Region D
          </text>
        </g>
        <path
          d="M NaN NaN A 33.33333333333333 33.33333333333333 0 0 0 NaN NaN L 50 50 L NaN NaN"
          fill="#01b25c"
        />
        <g>
          <text
            fill="black"
            fontSize={4.166666666666667}
            textAnchor="middle"
            x={NaN}
            y={NaN}
          >
            %
          </text>
          <text
            dy={4.166666666666667}
            fill="black"
            fontSize={3.125}
            textAnchor="middle"
            x={NaN}
            y={NaN}
          >
            Region E
          </text>
        </g>
        <path
          d="M NaN NaN A 33.33333333333333 33.33333333333333 0 0 0 NaN NaN L 50 50 L NaN NaN"
          fill="#e1c54e"
        />
        <g>
          <text
            fill="black"
            fontSize={4.166666666666667}
            textAnchor="middle"
            x={NaN}
            y={NaN}
          >
            %
          </text>
          <text
            dy={4.166666666666667}
            fill="black"
            fontSize={3.125}
            textAnchor="middle"
            x={NaN}
            y={NaN}
          >
            Region F
          </text>
        </g>
        <path
          d="M NaN NaN A 33.33333333333333 33.33333333333333 0 0 0 NaN NaN L 50 50 L NaN NaN"
          fill="#f89764"
        />
        <g>
          <text
            fill="black"
            fontSize={4.166666666666667}
            textAnchor="middle"
            x={NaN}
            y={NaN}
          >
            %
          </text>
          <text
            dy={4.166666666666667}
            fill="black"
            fontSize={3.125}
            textAnchor="middle"
            x={NaN}
            y={NaN}
          >
            Region G
          </text>
        </g>
        <path
          d="M NaN NaN A 33.33333333333333 33.33333333333333 0 0 0 NaN NaN L 50 50 L NaN NaN"
          fill="#a3704d"
        />
        <g>
          <text
            fill="black"
            fontSize={4.166666666666667}
            textAnchor="middle"
            x={NaN}
            y={NaN}
          >
            %
          </text>
          <text
            dy={4.166666666666667}
            fill="black"
            fontSize={3.125}
            textAnchor="middle"
            x={NaN}
            y={NaN}
          >
            Region H
          </text>
        </g>
      </svg>
    </div>
  </div>
</div>
`;
